# C_SERVER

./: CMakeLists.txt  main.c  main.cpp
include/LFS/: Logger.h  Request.hpp  client.h  client.hpp  connection.h  handler_codes.h  logger.hpp  netutils.hpp  pollfds_dynamic.h  request.hpp  request_parser.h  response.hpp  server.h  server.hpp  server_context.h  stringutils.hpp  udp_listener.h  udp_listener.hpp  udp_yapper.h  udp_yapper.hpp
src/: client.c  client.cpp  connection.c  connection.cpp  netutils.cpp  pollfds_dynamic.c  request.cpp  response.cpp  server.c  server.cpp  server_context.c  udp_listener.c  udp_listener.cpp  udp_yapper.c  udp_yapper.cpp
